# video-stt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/video_stt/: cli.py
tests/: test_cli.py
